fixed spacing issue

--- a/index.css
+++ b/index.css
@@ -139,8 +139,9 @@ p {
     .intro {
         line-height: 120%;
         margin-left: 5%;
-        margin-right: 0%;
-        border: 5px solid red;
+        margin-right: 5%;
+        justify-content: center;
+        align-items: center;
     }
     
     .first {
